Modif test README.md